# mantenimiento

./: .gitignore
backend/: alembic.ini  docker-compose.redis.yml  docker-compose.test.yml  docker-compose.yml  drop_reparacion_factura.py  out.sql  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 00069dbad98b_add_reparacion_gastos_table.py  215d5d80f90c_add_factura_columns_to_reparacion.py  47a5ca083aba_add_incidencia_and_billing_fields_to_.py  56034520f738_fix_type_hints_relations.py  5e978b7f82b3_incidencia_fk_equipo_on_delete_cascade.py  628b5fe68e5d_init_schema.py  67fddd81e0e1_add_tipo_usuario_id_to_ubicacion.py  6bbbfa3e9e23_add_adjuntos_incidencia_equipo.py  7074faab4b5b_reparacion_fk_equipo_on_delete_cascade.py  728b57b94611_nfc_unique_lower_index.py  796692a9aaaf_ubicacion_timestamps_unique_idx.py  7d0bddf01669_add_notas_and_user_fields.py  886e039c7746_add_user_name_surname.py  91c8bf68af41_usuario_unique_checks.py  a4c329b7059c_add_reparacion_factura_table.py  a53f45ec0ebf_equipo_fks_ondelete_set_null_types.py  adc6fbc7ed40_usuario_citext_email_unique_mfa_.py  b076903358e5_initial_clean_schema.py  b3393d72c463_seccion_citext_unique_reparacion_.py  c1b044594b18_fix_remove_field_index_true_with_sa_.py  c4f2d05cea17_reparacion.py  c9385816ede8_merge_heads_usuario_ubicacion.py  d27726981169_movimiento_fks_cascade_set_null.py  d38a1a881416_citext_ondelete_set_null.py  (+2 more)
backend/app/: main.py
backend/seeds/: seed_dev.py
backend/tests/: conftest.py  test_sanity.py  utils.py
frontend/: README.md  (+1 more)
(+126 files in other folders)
